--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="Elvin Eng">
 
-    <link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -16,9 +17,9 @@
     - Check letter
 -->
 
-    
-    <script src="js/doglist.js"></script> <!-- This is improper -->
-    <script src="js/scripts.js"></script>
+    <!-- This JS is improper -->
+    <script src="assets/javascript/doglist.js"></script>
+    <script src="assets/javascript/game.js"></script>
 
 </body>
 </html>
