added test functions

--- a/index.html
+++ b/index.html
@@ -12,10 +12,41 @@
 </head>
 
 <body>
-<!--
-    - Enter letter
-    - Check letter
--->
+    <div id="test"></div>
+    <br/><br/>
+
+    <div>Guess the word</div>
+    <br/><br/>
+    <div id="test-word"></div>
+    <div>
+<br/><br/>
+    <div id="test-random"></div>
+<br/><br/>
+    <div id="test-array"></div>
+    <div>
+<br/><br/>
+
+<br/><br/><br/><br/>
+        <span id="carMake"></span><br/>
+        <span id="carModel"></span><br/>
+        <span id="carColor"></span><br/>
+        <span id="carMilage"></span><br/>
+        <span id="carStatus"></span><br/>
+
+    <ul>Select what you want to do:
+    <li>[A] Update Car's Make</li>
+    <li>[B] Update Car's Model</li>
+    <li>[C] Update Car's Color</li>
+    <!--
+    <li>[-] Update Car's Mileage</li>
+    <li>[-] Update Car's Status</li>
+    -->
+    <li>[D] Drive to Work</li>
+    <li>[E] Drive Around the World</li>
+    <li>[F] Get a Tune Up</li>
+    <li>[G] Honk the Horn</li>
+    </ul>
+    </div>
 
     <!-- This JS is improper -->
     <script src="assets/javascript/doglist.js"></script>
