converted JS to Object

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <h1>Word Guessing Game</h1>
     <h2>Dog Breeds</h2>
-    <div>Press any key to get started!</div>
-    <div>Wins<span id="wins"></span></div>
-    <div>Current Word<span id="word"></span></div>
-    <div>Number of Guesses Remaining<span id="guesses"></span></div>
-    <div>Letters Already Guessed<span id="letters"></span></div>
+    <div>Press any key to get started!</div><br/>
+    <div>Wins: <span id="wins"></span></div>
+    <div>Current Word: <span id="word"></span></div>
+    <div>Number of Guesses Remaining: <span id="guesses"></span></div>
+    <div>Letters Already Guessed: <span id="letters"></span></div>
     
     <div>Key pressed: <span id="key"></span></div>
     
@@ -35,30 +35,7 @@
     <div id="test-random"></div>
 <br/><br/>
     <div id="test-array"></div>
-    <div>
-<br/><br/>
 
-<br/><br/><br/><br/>
-        <span id="carMake"></span><br/>
-        <span id="carModel"></span><br/>
-        <span id="carColor"></span><br/>
-        <span id="carMilage"></span><br/>
-        <span id="carStatus"></span><br/>
-
-    <ul>Select what you want to do:
-    <li>[A] Update Car's Make</li>
-    <li>[B] Update Car's Model</li>
-    <li>[C] Update Car's Color</li>
-    <!--
-    <li>[-] Update Car's Mileage</li>
-    <li>[-] Update Car's Status</li>
-    -->
-    <li>[D] Drive to Work</li>
-    <li>[E] Drive Around the World</li>
-    <li>[F] Get a Tune Up</li>
-    <li>[G] Honk the Horn</li>
-    </ul>
-    </div>
 
     <!-- This JS is improper -->
     <script src="assets/javascript/doglist.js"></script>
